# llm-mock

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
build_audit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_mock.vcxproj  basic_mock.vcxproj.filters  ci_test.vcxproj  ci_test.vcxproj.filters  error_simulation.vcxproj  error_simulation.vcxproj.filters  llm-mock.sln  pattern_mock.vcxproj  pattern_mock.vcxproj.filters
build_audit/basic_mock.dir/Debug/: basic_mock.exe.recipe
build_audit/basic_mock.dir/Debug/basic_mock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/ci_test.dir/Debug/: ci_test.exe.recipe
build_audit/ci_test.dir/Debug/ci_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/error_simulation.dir/Debug/: error_simulation.exe.recipe
build_audit/error_simulation.dir/Debug/error_simulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_audit/pattern_mock.dir/Debug/: pattern_mock.exe.recipe
build_audit/pattern_mock.dir/Debug/pattern_mock.tlog/: CL.command.1.tlog  (+8 more)
examples/: basic_mock.cpp  ci_test.cpp  error_simulation.cpp  mock_testing.cpp  pattern_mock.cpp
include/: llm_mock.hpp
(+7 files in other folders)
